--- a/language/zh-cn/kun.json
+++ b/language/zh-cn/kun.json
@@ -6,8 +6,8 @@
   "sub": "备用站",
   "about": "关于",
   "github": "GitHub 开源地址",
-  "404": "页面未找到",
-  "remake": "一键转生为萝莉",
+  "404": "页面飞走噜~",
+  "remake": "一键转生萝莉",
   "loli": "请给我一只萝莉！",
   "forum": {
     "title": "羽ACG-游戏下载站",
