--- a/language/en-us/kun.json
+++ b/language/en-us/kun.json
@@ -18,7 +18,7 @@
     "details": "Occasionally share some free and useful small software."
   },
   "sticker": {
-    "title": "备用发布页-GitHub",
+    "title": "Alternative Release Page-GitHub",
     "details": "If the domain name you are currently visiting is unavailable one day, you can jump to GitHub or the latest."
-  },
+  }
 }
