--- a/language/zh-cn/kun.json
+++ b/language/zh-cn/kun.json
@@ -5,7 +5,7 @@
   "main": "主站",
   "sub": "备用站",
   "about": "关于",
-  "github": "GitHub 开源地址",
+  "github": "点我进入异世界~",
   "404": "页面飞走噜~",
   "remake": "一键转生萝莉",
   "loli": "请给我一只萝莉！",
