--- a/language/en-us/kun.json
+++ b/language/en-us/kun.json
@@ -1,11 +1,11 @@
 {
-  "title": "The Star of the Other Shore - Yu ACG Navigation Page",
+  "title": "The Star of the Other Shore",
   "lightMode": "Light Mode",
   "darkMode": "Dark Mode",
   "main": "Main Websites",
   "sub": "Backup Station",
   "about": "About",
-  "github": "GitHub Repository",
+  "github": "Click me to enter another world~",
   "404": "The page is flying away~",
   "remake": "One-click Reincarnation to Loli",
   "loli": "Give me a Loli pls",
